@@ -464,6 +464,17 @@
                                 </div>
                                 <div>
                                     <div class="card">
+                                        <img class="thumb" width="300" height="300" src="projects/google-snake/snake.png" alt="google-snake" />
+                                        <h1 style="color: black;">Google Snake</h1>
+                                        <p class="desc">It is here at last! Google Snake! Play this fun game made by google! Click on the icons to play how you want!</p>
+                                        <div style="margin: 24px 0;"> 
+                                            <i class="fa-solid fa-keyboard"></i>
+                                        </div>
+                                        <button class="white" onclick="window.location.href='/projects/google-snake/index.html'">Launch Project</button>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="card">
                                         <img class="thumb" width="300" height="300" src="projects/hackertype/logo192.png" alt="hackertype" />
                                         <h1 style="color: black;">Hacker Typer</h1>
                                         <p class="desc">Trick your friends into thinking you are hacking into the FBI or some other government agency with this little tool. This does not hack anything!</p>
@@ -867,7 +878,7 @@
                 </h1>
                 <h3>Web Developer</h3>
                 <h4><a style="color: white;font-size: 15px;" href="/comments.html">Comments closed :(</a><br>
-                    <a style="color: #73ad21;font-size: 15px;" href="/dump/changelog.txt">Whats new?</a>
+                    <a style="color: #73ad21;font-size: 15px;" href="/projects/google-snake/index.html">Whats new?</a>
                 <div class="wrapper-img"><img style="width: 200px; height: 200px;" src="/img/double.png" alt="" /><img class="img-hide" style="width: 200px; height: 200px;" src="/img/double2.gif" alt="" /></div>
             </div>
             <div class="copyright">
