@@ -57,6 +57,14 @@
         <meta charset="utf-8" />
         <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport" />
         <title>Google Snake | 3kh0</title>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-98DP5VKS42"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-98DP5VKS42');
+</script>
         <script nonce="MbQrqGoifFdVWeMKcb2vew==">
             (function () {
                 window.google = {
