@@ -10,6 +10,10 @@ Here is where I will post updates on when a new game is added or something chang
 NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!
 
 ------------------------------------------------------------
+Feb, 28
++ Added Google snake!
+^ Fixed Error with HexGL not working.
+------------------------------------------------------------
 Feb, 24
 So yeah, today I brought my home computer to school. It is a gaming laptop but not that big. Hopefully my mom does not notice :)
 + Added Cubefield
